# pm

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  pm_core.hpp  rust-toolchain.toml
.claude/: settings.local.json
benchmarks/: latest.csv
crates/box3d-sys/: Cargo.toml  build.rs
crates/box3d-sys/src/: lib.rs  pmb3.c
crates/box3d-sys/tests/: horde.rs  truck_feel.rs
crates/pm/: Cargo.toml  build.rs
crates/pm-control-core/: Cargo.toml
crates/pm-control-core/src/: clock.rs  fault.rs  fault_table.rs  io.rs  lib.rs  monitor.rs  net.rs  params.rs  prof.rs  record.rs  save.rs  signal.rs  timers.rs
crates/pm-control-host/: Cargo.toml
crates/pm-control-host/examples/: loopback.rs  stress.rs
crates/pm-control-host/src/: lib.rs
crates/pm-world/: Cargo.toml  build.rs
crates/pm-world-derive/: Cargo.toml
crates/pm-world-derive/src/: lib.rs
crates/pm-world-sdl/: Cargo.toml  build.rs
crates/pm-world-sdl/shaders/: basic3d.wgsl
crates/pm-world-sdl/src/: audio.rs  font.rs  gpu3d.rs  lib.rs  model.rs  sprite.rs
crates/pm-world/examples/: bench.rs  sim.rs
crates/pm-world/src/: blend.rs  bvh.rs  duration.rs  events_tests.rs  journal.rs  kernel.rs  lib.rs  math.rs  modload.rs  net.rs  net_tests.rs  netmod.rs  netmod_tests.rs  paged.rs  params.rs  pool.rs  predict.rs  quic_tests.rs  smooth.rs  spatial.rs  transport.rs  util.rs
crates/pm-world/tests/: kernel.rs  wire.rs
crates/pm/examples/: bench.rs  sim.rs  taskbench.rs
crates/pm/src/: camera.rs  duration.rs  events_tests.rs  id.rs  kernel.rs  lib.rs  math.rs  modload.rs  net.rs  net_tests.rs  netmod.rs  netmod_tests.rs  paged.rs  pool.rs  predict.rs  probe.rs  quic_tests.rs  smooth.rs  spatial.rs  transport.rs  util.rs
crates/pm/tests/: events.rs  kernel.rs  net.rs  netmod.rs  quic.rs
crates/pm_derive/: Cargo.toml
crates/pm_derive/src/: lib.rs
crates/pm_sdl/: Cargo.toml  build.rs
crates/pm_sdl/shaders/: basic3d.wgsl  post3d.wgsl  text.wgsl
crates/pm_sdl/src/: font.rs  gpu3d.rs  lib.rs  sprite.rs
deploy/: deploy.sh  hogs.service
docs/: collisions.md  journey.md  params.md  roadmap.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs  sdl_client.rs
examples/drive/: Cargo.toml
examples/drive/src/: bot_client.rs  client.rs  common.rs  main.rs  player_client.rs  sdl_client.rs  server.rs
examples/hellfire/: CMakeLists.txt  Cargo.toml  hellfire.cpp  hellfire_client.cpp  hellfire_common.hpp  hellfire_server.cpp  smoke_test.sh
examples/hellfire/core/: Cargo.toml
examples/hellfire/core/src/: lib.rs
examples/hellfire/game/: Cargo.toml
examples/hellfire/game/src/: client.rs  main.rs  sdl_client.rs  server.rs
examples/hellfire/meteor/: Cargo.toml
examples/hellfire/meteor/src/: lib.rs
examples/hellfire/mod-template/: Cargo.toml  README.md
examples/hellfire/mod-template/src/: lib.rs
examples/hellfire/mods/: example_mod.cpp
examples/hellfire/src/: client.rs  common.rs  main.rs  sdl_client.rs  server.rs
examples/hellfire_core/: Cargo.toml
examples/hogs/: Cargo.toml
examples/hogs/assets/: README.md  flyer.glb  heli.glb  hog.glb  truck.glb
examples/hogs/sim/: Cargo.toml
examples/hogs/sim/src/: lib.rs
examples/hogs/sim/tests/: golden.rs  physics.rs
examples/hogs/src/: bot_client.rs  common.rs  main.rs  models.rs  phys.rs  player_client.rs  server.rs  sfx.rs  telemetry.rs
examples/meteor/: Cargo.toml
examples/meteor/src/: lib.rs
examples/solids/: Cargo.toml
examples/solids/src/: main.rs
src/: pm_core.hpp  pm_debug.hpp  pm_math.hpp  pm_mod.hpp  pm_sdl.hpp  pm_spatial_grid.hpp  pm_sprite.hpp  pm_sync.hpp  pm_udp.hpp  pm_util.hpp
src/examples/hellfire/: CMakeLists.txt  README.md  combine_reports.py  hellfire_client.cpp  hellfire_common.hpp  hellfire_diag.hpp  hellfire_server.cpp  smoke_test.sh
src/examples/hellfire/mods/: example_mod.cpp
src/pm/: pm_core.hpp  pm_debug.hpp  pm_math.hpp  pm_mod.hpp  pm_sdl.hpp  pm_spatial_grid.hpp  pm_sprite.hpp  pm_udp.hpp  pm_util.hpp
src/tests/: CMakeLists.txt  bench.cpp  test.cpp  test_main.cpp  test_types.hpp
src_rust/: Cargo.toml  README.md  SYNC_DESIGN.md
src_rust/pm/: Cargo.toml
src_rust/pm/examples/: demo.rs  sim.rs  taskbench.rs
src_rust/pm/examples/demo/: main.rs  sdl_client.rs
src_rust/pm/examples/hellfire/: client.rs  common.rs  main.rs  sdl_client.rs  server.rs
src_rust/pm/src/: kernel.rs  lib.rs  math.rs  modload.rs  net.rs  pool.rs  probe.rs  spatial.rs  sprite.rs  transport.rs  util.rs
src_rust/pm/tests/: kernel.rs  net.rs  quic.rs
tests/: CMakeLists.txt  test.cpp
