[workspace]
resolver = "3"
members = [
    "crates/pm",
    "crates/pm_sdl",
    "examples/demo",
    "examples/drive",
    "examples/hellfire/game",
    "examples/hellfire/core",
    "examples/hellfire/meteor",
    "examples/hellfire/mod-template",
    "examples/hogs",
    "examples/solids",
]

# Optimized but debuggable (the old C++ RelWithDebInfo default).
[profile.release]
debug = true
