[workspace]
resolver = "3"
members = [
    "crates/pm-world",
    "crates/pm-world-derive",
    "crates/pm-world-sdl",
    "crates/pm-control-core",
    "crates/pm-control-host",
    "crates/box3d-sys",
    "examples/hogs",
    "examples/hogs/sim",
    "examples/solids",
]

# pm-control crates inherit these (version.workspace = true).
[workspace.package]
version = "0.1.0"
edition = "2024"

# Optimized but debuggable (the old C++ RelWithDebInfo default).
[profile.release]
debug = true
