[package]
name = "pm_sdl"
version = "0.1.0"
edition = "2024"

[dependencies]
pm = { path = "../pm" }
sdl3 = { version = "0.18", features = ["build-from-source", "static-link", "unsafe_textures"] }
png = "0.18"
fontdue = "0.9"

[build-dependencies]
naga = { version = "29", features = ["wgsl-in", "spv-out"] }
