[package]
name = "hogs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
pm-world = { path = "../../crates/pm-world" }
pm-world-sdl = { path = "../../crates/pm-world-sdl" }
# Telemetry node: signals/faults broadcast to pm-mon / pm-watch. Core
# only (no_std) — the UDP port is 20 lines in telemetry.rs, so the
# game doesn't inherit the host crate's TUI deps.
pm-control-core = { path = "../../crates/pm-control-core" }
# THE DETERMINISM BOUNDARY (v2 item 3): the shared steps, predicted
# pods, params, and shared geometry — everything that must run
# byte-identical on server and client, re-exported through common.rs.
hogs-sim = { path = "sim" }
# THE SERVER'S PHYSICAL WORLD (Box3D adoption, integration slice 1
# 2026-07-23): hogs jostle, trucks tumble, statics are solver bodies.
# Server-side only — prediction still runs the hogs-sim shared steps.
box3d-sys = { path = "../../crates/box3d-sys" }
