[package]
name = "pm"
version = "0.1.0"
edition = "2024"

[features]
sdl = ["dep:sdl3"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
sdl3 = { version = "0.14", optional = true, features = ["build-from-source", "static-link"] }
bytes = "1"
quinn-proto = "0.11"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
