[package]
name = "pm"
version = "0.1.0"
edition = "2024"

[features]
sdl = ["dep:sdl3", "dep:png", "dep:fontdue"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
sdl3 = { version = "0.14", optional = true, features = ["build-from-source", "static-link", "unsafe_textures"] }
png = { version = "0.17", optional = true }
fontdue = { version = "0.9", optional = true }
libloading = "0.8"
bytes = "1"
quinn-proto = "0.11"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
