[package]
name = "mod_template"
version = "0.1.0"
edition = "2024"

[lib]
# A pm mod is a C-ABI shared library the host dlopen's at runtime.
crate-type = ["cdylib"]

[dependencies]
# In-tree these are path deps so the template keeps building with the
# engine. When you ship the engine, publish pm + your game's `core`
# crate and swap these for `version`/`git` deps, e.g.
#   pm = "0.1"
#   hellfire_core = "0.1"
# The pinned rust-toolchain.toml (workspace root) is what makes an
# out-of-tree build resolve the same compiler the host used.
pm-world = { path = "../../../crates/pm-world" }
hellfire_core = { path = "../core" }

# Match the host's profile, or the ABI gate refuses the load: a mod built
# `--release` cannot load into a debug host and vice versa. In-tree the
# workspace root governs the profile (this block is ignored, hence
# commented out); UNCOMMENT it once you copy this crate out of the
# workspace so a standalone `--release` build matches a release host.
#[profile.release]
#debug = true
